Fixed an issue with the footer z-index and links not being clickable

--- a/wp-content/themes/CustomParallax/style.css
+++ b/wp-content/themes/CustomParallax/style.css
@@ -462,11 +462,10 @@ position: relative;
 	height: auto;
 	margin: 0 auto;
 	width: 100%;
-	position: relative;
 	box-shadow: 0 0 30px rgba(0,0,0,0.8);
 	padding: 50px 0;
 	color: #fff;
-  z-index: -99999;
+/*  z-index: -99999;*/
 }
 
 /* Non-essential demo stuff */
